# BsuSat_orientation_module

./: .gitmodules  CMakeLists.txt  README.md  build.sh  func_plus.cpp  main.cpp
sat_libs/ecoil/: CMakeLists.txt  ecoil.c
sat_libs/ecoil/inc/: ecoil.h
sat_libs/ina3221/: CmakeLists.txt  ina3221.c
sat_libs/ina3221/inc/: ina3221.h
sat_libs/satframe/: CMakeLists.txt  satframe.cpp
sat_libs/satframe/inc/: satframe.hpp
